styles, tooltips, checkboxes

--- a/Content Builder/sfmc_vuejs_progressive_survey/configurations/app_configuration.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/configurations/app_configuration.html
@@ -28,6 +28,7 @@
       "branding_bar": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\branding_bar",
       "channel_drawer": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\channel_drawer",
       "survey_form": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\survey_form",
+      "survey_form_horizontal": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\survey_form_horizontal",
       "unauthorized_user": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\unauthorized_user",
       "legal": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\legal",
       "submit_button_animation": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\styles\\submit_button_animation",
