--- a/Content Builder/survey_index.html
+++ b/Content Builder/survey_index.html
@@ -20,8 +20,13 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+  
+  <script src="https://unpkg.com/v-tooltip@^2.0.0"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
+
+  %%=TreatAsContent(ContentBlockByName('Content Builder\sfmc_vuejs_progressive_survey\frontend\styles\vue_formulate_styles'))=%%
 
 <body>
   <div v-cloak id="app">
