front-end adjustments, validation logic

--- a/Content Builder/sfmc_vuejs_progressive_survey/configurations/app_configuration.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/configurations/app_configuration.html
@@ -2,7 +2,7 @@
   "branding": {
     "brandName": "Basetime",
     "websiteURL": "https://basetime.io",
-    "supportDarkMode": "true",
+    "supportDarkMode": "false",
     "default": {
       "logo": "https://www.ikea.com/us/en/static/ikea-logo.f7d9229f806b59ec64cb.svg",
       "colors": {
@@ -38,6 +38,10 @@
         "utils": "Content Builder\\sfmc_vuejs_progressive_survey\\lib\\ssjs\\utils"
       }
     }
+  },
+  "unauthorized": {
+    "icon": "mdi-account-question",
+    "copy": "Looks like we can't find you in your system. <br> Please ensure you've reached this page from an Ikea email. <br><br> Visit <a href='https://www.ikea.com'>IKEA.com</a> to sign up for emails."
   },
   "apiBaseURL": "https://cloud.emailmarketingunderstood.com/basetimepreferenceapi"
 }
