--- a/Content Builder/sfmc_vuejs_progressive_survey/frontend/app_js.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/frontend/app_js.html
@@ -10,7 +10,12 @@ new Vue({
       applicationConfiguration,
       surveyConfiguration,
       formSubmitting: false,
-      survey: survey
+      survey,
+      subscriber: {
+        subscriberKey: subscriberKey,
+        emailAddress: emailAddress,
+        subscriberId: subscriberId
+      }
     }
   },
   mounted() {
