--- a/Content Builder/sfmc_vuejs_progressive_survey/frontend/styles/vue_formulate_styles.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/frontend/styles/vue_formulate_styles.html
@@ -2,7 +2,7 @@
 :root {
   --primary: rgb(68, 50, 168);
   --ltGrey: #C0C0C0;
-  --mdGrey: #777777;
+  --mdGrey: #2e3543;
   --error: red;
 }
 
@@ -113,5 +113,9 @@
   visibility: visible;
   opacity: 1;
   transition: opacity .15s;
+}
+
+.v-icon {
+  font-size: 25px!important;
 }
 </style>
