--- a/Content Builder/sfmc_vuejs_progressive_survey/configurations/survey/20220701/survey_configuration.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/configurations/survey/20220701/survey_configuration.html
@@ -1,119 +1,131 @@
-{
-  "profile": {
-    "headline": "Update your profile",
-    "copy": "",
-    "inputs": [
+[
+  {
+    "ref": "contact_info",
+    "label": "Contact Info",
+    "subtitle": "",
+    "copy": "We're excited to work with you! Please take a moment to complete a few questions to confirm you're ready for your upcoming installation service.",
+    "form": [
       {
         "type": "text",
-        "label": "First Name",
-        "name": "firstName"      
+        "label": "Address of Installation*",
+        "name": "address",
+        "disabled": true,
+        "required": true,
+        "rules": {
+          "required": (value) => !!value || 'Required'
+        }
       },
       {
         "type": "text",
-        "label": "Last Name",
-        "name": "lastName"
-      }
+        "label": "Primary contact phone number*",
+        "name": "PhoneNumber",
+        "disabled": true,
+        "required": true,
+        "validation": "^required:trim|matches:/^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$/im",
+        "rules": {
+          "required": (value) => !!value || 'Required',
+          "match": (value) => /^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$/.test(value) || 'Invalid Phone Number'
+        }
+      },
     ]
   },
-  "channels": {
-    "email": {
-      "icon": "mdi-email",
-      "preferences": {
-        "headline": "Email Preferences",
-        "copy": "Please select your email preferences below",
-        "radios": [
-          {
-            "value": "onceAWeek",
-            "label": "Once A Week"
-          },
-          {
-            "value": "holidays",
-            "label": "Holidays Only"
-          },
-          {
-            "value": "specialEvents",
-            "label": "Special Events Only"
-          },
-          {
-            "value": "unsubscribe",
-            "label": "Unsubscribe Me From All Emails"
-          }
+  {
+    "ref": "delivery",
+    "label": "Delivery",
+    "subtitle": "",
+    "copy": "Please choose from the dropdown below to confirm the status of delivery of your product from IKEA. <i>Please note the delivery of items should be adjacent to the room where cabinets will be installed.</i>",
+    "form": [{
+      "type": "select",
+      "name": "Delivery__c",
+      "label": "Please select delivery status",
+      "rules": {
+        "required": (value) => !!value || 'Required',
+      },
+      "options": [
+        { "value": 'My full product order has been delivered', "text": 'My full product order has been delivered' },
+        { "value": 'My full product order will be delivered by my install start date', "text": 'My full product order will be delivered by my install start date' },
+        { "value": 'My full product order will not be delivered until after my install start date', "text": 'My full product order will not be delivered until after my install start date' },
+        { "value": 'Other', "text": 'Other' },
+      ]
+    }]
+  },
+  {
+    "ref": "requirements",
+    "label": "Requirements",
+    "subtitle": "",
+    "copy": "Please verify the following items and ensure completion prior to your installation start date.",
+    "form": [
+      {
+        "type": "checkbox",
+        "label": "",
+        "name": "requirements",
+        "options": [
+          { "value": 'Customer_on_site__c', "label": 'You or a decision maker 18 years or older will be present during the installation service.' },
+          { "value": 'Inventory_to_be_completed__c', "label": 'Inventory of all product orders will be completed prior to the arrival of the installation crew.' },
+          { "value": 'Parking_available1__c', "label": 'Parking will be available at the project site for the installation crew.' },
+          { "value": 'Appliances_on_site_or_specs_provided__c', "label": 'Appliances will be in and adjacent room, on-site, and disconnected or appliance specifications provided to IKEA Kitchen Services.' },
+          { "value": 'GC_completed__c', "label": 'All necessary general contracting work, included but is not limited to demolition of existing cabinets, wall plastering, electrical, plumbing, and flooring installation, will be completed prior to the arrival of the installation crew.' },
+          { "value": 'Workspace_provided__c', "label": 'Space on-site and near the Kitchen will be available for installation crew to complete assembly and cutting of materials.' },
+          { "value": 'Pets_and_children_off_site__c', "label": 'Pets and children will be safely away from installation site.' }
         ]
       },
-      "subscriptions": {
-        "headline": "Email Subscriptions",
-        "copy": "Please select your email subscriptions below",
-        "inputs": [],
-        "checkboxes": [
+      {
+        "type": "checkbox",
+        "label": "",
+        "name": "go_backs",
+        "rules": {
+          "required": (value) => !!value || 'Required',
+        },
+        "options": [
           {
-            "value": "dailyNewsletter",
-            "label": "Daily Newsletter"
+            "value": 'Go_back_acknowledged__c',
+            "label": '<b>I acknowledge that if the requirements listed here are not completed prior to the start date of my installation I will be subject to a minimum go-back fee of $250.00.</b><span style="color: red";>* Required</span>'
           },
-          {
-            "value": "devChat",
-            "label": "Developer Chat"
-          },
-          {
-            "value": "devOps",
-            "label": "Developer Ops Weekly"
-          }
-        ]
-      }
-    },
-    "sms": {
-      "icon": "mdi-android-messages",
-      "preferences": {
-        "headline": "SMS Preferences",
-        "copy": "Please select your text message preferences below",
-        "radios": [
-          {
-            "value": "onceAWeek",
-            "label": "Once A Week"
-          },
-          {
-            "value": "holidays",
-            "label": "Holidays Only"
-          },
-          {
-            "value": "specialEvents",
-            "label": "Special Events Only"
-          },
-          {
-            "value": "unsubscribe",
-            "label": "Unsubscribe Me From All Emails"
-          }
         ]
       },
-      "subscriptions": {
-        "headline": "SMS Subscriptions",
-        "copy": "Please select your text message subscriptions below",
-        "inputs": [],
-        "checkboxes": [
-          {
-            "value": "dailyNewsletter",
-            "label": "Daily Newsletter"
-          },
-          {
-            "value": "devChat",
-            "label": "Developer Chat"
-          },
-          {
-            "value": "devOps",
-            "label": "Developer Ops Weekly"
-          }
+    ]
+  },
+  {
+    "ref": "verify",
+    "label": "Verify",
+    "subtitle": "",
+    "copy": "Almost there! We just need to verify a couple more items.",
+    "form": [
+      {
+        "type": "checkbox",
+        "label": "",
+        "name": "Final_plan_provided__c",
+        "rules": {
+          "required": (value) => !!value || 'Required',
+        },
+        "options": [
+          { "value": 'Final_plan_provided__c', "label": 'I have provided the final plan from my Kitchen Planner to IKEA Kitchen Services via my Customer Portal. <a href="#" target="_blank">Need to upload your plan? Click here.</a>' }
         ]
-      }
-    }
-  },
-  "unauthorized": {
-    "icon": "mdi-account-question",
-    "copy": "Looks like we can't find you in your system. <br> Please ensure you've reached this page from a basetime.io email. <br><br> Visit <a href='basetime.io'>Basetime.io</a> to sign up for emails."
-  },
-  "legal": {
-    "icon": "mdi-account-question",
-    "copy": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-  },
-  "dataExtension": {
-    "externalKey": "A89D62BA-3F5F-400C-B0E9-979FD11948EF"
+      },
+      {
+        "type": "radio",
+        "label": "What type of flooring will you have in your kitchen?",
+        "name": "Type_of_Floor__c",
+        "rules": {
+          "required": (value) => !!value || 'Required',
+        },
+        "options": [
+          { "value": 'fixed', "label": 'Fixed', "tooltip": 'Here is a tooltip for Fixed Flooring details. Not sure how long this will be.' },
+          { "value": 'floating', "label": 'Floating', "tooltip": 'Here is a tooltip for Floating Flooring details. Not sure how long this will be.' }
+        ]
+      },
+      {
+        "type": "radio",
+        "label": "I need a Certificate of Insurance (COI) for my installation service.",
+        "name": "COI__c",
+        "rules": {
+          "required": (value) => !!value || 'Required',
+        },
+        "options": [
+          { "value": 'No', "label": 'No' },
+          { "value": 'Yes', "label": 'Yes' }
+        ]
+      },
+    ]
   }
-}
+]
