--- a/Content Builder/sfmc_vuejs_progressive_survey/configurations/app_configuration.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/configurations/app_configuration.html
@@ -43,5 +43,5 @@
     "icon": "mdi-account-question",
     "copy": "Looks like we can't find you in your system. <br> Please ensure you've reached this page from an Ikea email. <br><br> Visit <a href='https://www.ikea.com'>IKEA.com</a> to sign up for emails."
   },
-  "apiBaseURL": "https://cloud.emailmarketingunderstood.com/basetimepreferenceapi"
+  "apiBaseURL": "https://mc1qn0yvnrq-lmv34mcgry2c8s60.pub.sfmc-content.com/kiho1ru5xff"
 }
