--- a/Content Builder/sfmc_vuejs_progressive_survey/configurations/app_configuration.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/configurations/app_configuration.html
@@ -1,41 +1,15 @@
 {
   "branding": {
-    "brandName": "Basetime",
-    "websiteURL": "https://basetime.io",
-    "supportDarkMode": "false",
+    "brandName": "bldr.io",
+    "websiteURL": "https://www.bldr.io",
+    "logoScale": "50",
     "default": {
-      "logo": "https://www.ikea.com/us/en/static/ikea-logo.f7d9229f806b59ec64cb.svg",
-      "colors": {
-        "primary": "#00FFFF",
-        "secondary": "blue",
-        "accent": "yellow",
-        "paper": "#fff"
-      }
-    },
-    "dark": {
-      "logo": "https://basetime.io/basetime-developer-network-logo.svg",
+      "logo": "https://bldr.basetime.io/bldr-logo.png",
       "colors": {
         "primary": "#aadeeb",
         "secondary": "#0098bc",
         "accent": "#fc6833",
         "paper": "#0f1d20"
-      }
-    }
-  },
-  "map": {
-    "content_block": {
-      "preference_options": "Content Builder\\sfmc_vuejs_progressive_survey\\configurations\\preference_options",
-      "branding_bar": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\branding_bar",
-      "channel_drawer": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\channel_drawer",
-      "survey_form": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\survey_form",
-      "survey_form_horizontal": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\survey_form_horizontal",
-      "unauthorized_user": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\unauthorized_user",
-      "legal": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\components\\legal",
-      "submit_button_animation": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\styles\\submit_button_animation",
-      "app_js": "Content Builder\\sfmc_vuejs_progressive_survey\\frontend\\app_js",
-      "ssjs": {
-        "wsProxy": "Content Builder\\sfmc_vuejs_progressive_survey\\lib\\ssjs\\wsProxy",
-        "utils": "Content Builder\\sfmc_vuejs_progressive_survey\\lib\\ssjs\\utils"
       }
     }
   },
