--- a/Content Builder/survey_index.html
+++ b/Content Builder/survey_index.html
@@ -28,11 +28,11 @@
 
 <body>
   <div v-cloak id="app">
-    %%=TreatAsContent(ContentBlockByName('Content Builder\sfmc_vuejs_progressive_survey\frontend\app_html'))=%%
+    %%=TreatAsContent(ContentBlockById('111559'))=%%
   </div>
 
 
-  %%=TreatAsContent(ContentBlockByName('Content Builder\sfmc_vuejs_progressive_survey\frontend\components\_component_imports'))=%%
+  %%=TreatAsContent(ContentBlockById('111561'))=%%
 
 </body>
 
